--- a/src/Components/AppHeader/AppHeader.scss
+++ b/src/Components/AppHeader/AppHeader.scss
@@ -1,10 +1,10 @@
 #app-header {
-  position: relative;
+  position: fixed;
   top: 0;
   z-index: 10;
 
   width: 100%;
-  height: 10rem;
+  min-height: 10rem;
   padding: 1rem 5rem;
   background-color: $secondary-background;
   box-shadow: 0 2px 15px $shadow;
